--- a/node/package.json
+++ b/node/package.json
@@ -1,31 +1,21 @@
 {
-  "name": "node-template",
+  "name": "node",
   "version": "1.0.0",
   "description": "",
   "type": "module",
   "exports": "./dist/index.js",
   "scripts": {
-    "build": "tsc && npm run build:graphql",
-    "build:graphql": "cp -r src/graphql dist",
+    "build": "tsc",
     "start": "npm run build && node --experimental-specifier-resolution=node dist/index.js",
     "dev": "nodemon"
   },
   "author": "Bill Li",
   "license": "ISC",
-  "dependencies": {
-    "@apollo/server": "^4.3.0",
-    "@graphql-tools/load-files": "^6.6.1",
-    "@graphql-tools/schema": "^9.0.12",
-    "aws-sdk": "^2.1261.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "graphql": "^16.6.0",
-    "uuid": "^9.0.0"
-  },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15",
-    "nodemon": "^2.0.20",
-    "typescript": "^4.9.4"
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@types/node": "^20.5.9"
   }
 }
