--- a/bun-websocket-server/package.json
+++ b/bun-websocket-server/package.json
@@ -7,5 +7,9 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=18.16.0",
+    "npm": ">=9.5.1"
   }
 }
